# sleep-inhibitor

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  setup.py  sleep-inhibitor  sleep-inhibitor.conf  sleep_inhibitor.py
plugins/: apk-running  is-alsa-playing  is-process-running  jellyfin-server  plex-media-server  pulse-audio  ssh-session-open
sleep_inhibitor/: __main__.py  sleep-inhibitor.service  sleep_inhibitor.py
sleep_inhibitor/plugins/: apk-running  plex-media-server  ssh-session-open
test/: run-test  test.conf  test.sh
